Fast death-cause showing finally works./babel.sh probability./babel.sh probability Also: fixed and/or selector being selectable even when hidden behind its slot module.

--- a/src/html/probability/probability.css
+++ b/src/html/probability/probability.css
@@ -79,7 +79,7 @@ h1          { text-align : center;  }
            /* ******* */
          }
  
-.noPointerEvents {
+.disabled {
 	pointer-events : none;
 }
 
